set language to en

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,7 +58,7 @@ layout: default
                     admin: admin,
                     distractionFreeMode: '{{site.gitalk.distractionFreeMode}}',
                     id: md5(location.pathname),
-                    
+                    language:'en'
                     });
                     
 
